[package]
name = "advanced-random-string"
version = "0.1.2"
authors = ["Jonathan McClement <jmcclement13@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Provides advanced string generation based on given charsets, lengths, and RNGs."
repository = "https://github.com/mcclementines/advanced-random-string"
readme = "README.md"
keywords = ["random", "string", "generation", "rng", "cryptography"]
categories = ["algorithms", "cryptography", "utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
